# lecture-of-generative-ai-and-business

./: 9_24メモ
agent/: pyproject.toml
my-project/: dataset.jsonl  readme.md  tarot.ipynb  tarot_knowledge.txt
