[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Mozyura",email = "Mozyura0810@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "strands-agents (>=1.9.1,<2.0.0)",
    "strands-agents-tools (>=0.2.8,<0.3.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
